# drf_api_permissions_postgres

./: README.md  manage.py  pyproject.toml
Electro/: admin.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
Electro/migrations/: 0001_initial.py
Electro_API_project/: asgi.py  settings.py  urls.py  wsgi.py
Electro_API_project/Electro/: models.py
Electro_API_project/Electro_API_project/: settings.py  urls.py
